# loop

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  LICENSE  Makefile  README.md  botpress_competitor_pitch.pptx  botpress_competitor_spec.docx  botpress_competitor_spec.md  conftest.py  pip_audit_allow.txt  pyproject.toml  release-please-config.json
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  cost-table-staleness.yml  cp-api-5000-rps.yml  cross-cloud-smoke.yml  dr-drill-clickhouse.yml  dr-drill-postgres.yml  e2e-web-smoke.yml  eu-smoke.yml  falco-observability-smoke.yml  fuzz-nightly.yml  gateway-cache-hit-ratio.yml  helm-chart-validation.yml  helm-e2e.yml  kb-retrieval-perf.yml  kms-integration.yml  mirror-bitnami-subcharts.yml  oncall-schedule-validate.yml  perf-baseline-100rpm.yml  perf-regression-budget.yml  promote-regional-images.yml  release-please.yml  release.yml  runtime-sse-1000.yml  threat-model-gate.yml  tool-host-warm-start.yml  turn-latency-k6.yml  voice-perf.yml
apps/docs/: README.md  index.mdx  mint.json  quickstart.mdx
apps/studio/: .gitignore  README.md  bundle-budget.json  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tests.json
bench/results/: cp_api_5000_rps.json  gateway_cache_hit_ratio.json  kb_retrieval_1m.json  perf_7d_baseline.json  perf_regression_budget.json  runtime_baseline_100rpm.json  runtime_sse_1000_concurrency.json  tool_host_warm_start.json  turn_latency_text_path_k6.json  voice_connection_pooling.json  voice_perf.json  voice_regional_latency_map.json  voice_tts_sentence_streaming.json
docs/: CLOUD_PROOF.md  THREAT_MODEL.md  branch-protection.md  index.md  quickstart.md
docs/concepts/: agents.md  channels.md  eval.md  memory.md  tools.md
docs/cookbook/: support_agent.md
docs/perf/: cp_api_5000_rps.md  gateway_cache_hit_ratio.md  gateway_provider_eval.md  kb_retrieval_1m.md  perf_regression_budget.md  runtime-baseline.md  runtime_sse_1000_concurrency.md  tool_host_warm_start.md  voice_perf.md
docs/site/: PARTNER_REVIEWS.md  acknowledgements.md  bug-bounty.md  data-retention.md  introduction.mdx  mint.json  pricing-verification.md  quickstart.mdx
docs/ux-scenarios/: README.md
examples/support_agent/: .env.example  README.md  agent.py  run_eval.py  run_local.py
examples/web_widget_demo/: README.md  index.html
infra/: docker-compose.yml  otel-collector.yaml
infra/falco/: loop_rules.yaml
infra/grafana/: loop-slo-burn.json
infra/oncall/: schedule.yaml
infra/prometheus/: alertmanager.yaml
infra/terraform/: regions.yaml
loop_implementation/: AGENTS.md  README.md
loop_implementation/adrs/: README.md
loop_implementation/api/: openapi.yaml
loop_implementation/architecture/: ARCHITECTURE.md  AUTH_FLOWS.md  CANONICAL_UX_SYSTEM_GAP_REGISTER.md  CLOUD_PORTABILITY.md  NETWORKING.md
loop_implementation/data/: SCHEMA.md
loop_implementation/engineering/: AUDIT_COMPLETENESS.md  AUDIT_COVERAGE.md  AUDIT_TRAIL_COVERAGE.md  BUG_BOUNTY.md  CHAOS_FINDINGS.md  COPY_GUIDE.md  DEPENDENCY_POLICY.md  DESIGN_SYSTEM.md  DPA.md  DPA_REDLINES.md  DR.md  (+26 more)
loop_implementation/scaffolding/: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
loop_implementation/scaffolding/.github/workflows/: ci.yml
loop_implementation/scaffolding/examples/support_agent/evals/: suite.yaml
outputs/: AGENT_START_PROMPT_SIMPLE.md  CLEANUP_RUN_THIS.sh  UX_UI_AGENT_START_PROMPTS.md
scripts/: Dockerfile.smoke  cleanup_agent_worktree.sh  cloud_proof_report.py  cp_smoke.py  cp_smoke.sh  cross_cloud_smoke.py  cross_cloud_smoke.sh  dr_clickhouse_restore_drill.sh  dr_postgres_pitr_drill.sh  e2e_web_smoke.py  e2e_web_smoke.sh  eu_smoke.py  eu_smoke.sh  gateway_cache_hit_ratio.py  helm_e2e_smoke_server.py  k6_cp_api_5000.js  k6_runtime_baseline_100rpm.js  k6_runtime_sse_1000.js  k6_turn_latency.js  kb_retrieval_perf.py  marketplace_acceptance.sh  multi_e2e.py  objstore_integrity_check.sh  openai_sse_fixture.py  perf_regression_budget.py  recalc.py  runtime_smoke.py  runtime_smoke.sh  spawn_agent_worktree.sh  tool_host_warm_start.py  voice_echo_test.py  voice_perf.py
tests/: test_agent_assignments.py  test_alibaba_terraform_module.py  test_audit_completeness.py  test_audit_completeness_walking.py  test_audit_coverage_matrix.py  test_aws_backends_integration.py  test_aws_terraform_module.py  test_bitnami_mirror_workflow.py  test_build_tracker.py  test_check_audit_allowlist_expiry.py  test_cloud_proof_report.py  test_cost_table_staleness_workflow.py  test_cp_api_5000_rps.py  test_cp_api_image_ci.py  test_cp_smoke.py  test_cross_cloud_smoke.py  test_demo_scripts.py  test_dependabot_config.py  test_dependency_scanning_gate.py  test_docs_links.py  test_docs_mint.py  test_docs_site.py  test_dr_clickhouse_restore_drill.py  test_dr_drill_workflows.py  test_dr_postgres_pitr_drill.py  test_dr_tabletop.py  test_e2e_web_smoke.py  test_enterprise_helm_values.py  test_eu_smoke.py  test_eu_smoke_workflow.py  test_falco_observability_smoke_workflow.py  test_fuzz_harness.py  test_gateway_cache_hit_ratio_workflow.py  test_gen_cp_api_client.py  test_gen_openapi_ts.py  test_gen_ts_sdk.py  test_helm_chart.py  test_helm_chart_validation_workflow.py  test_helm_clickhouse_dependency.py  test_helm_cp_api_hpa_pdb.py  (+59 more)
tools/: README.md  _agent_assignments.py  _agent_assignments_ux.py  _stories_ux.py  _stories_v2.py  _story_overrides.py  agent_lifecycle.py  audit_agent_behaviour.py  build_tracker.py  check_audit_allowlist_expiry.py  check_checkpoint_discipline.py  check_docs_links.py  check_docs_with_code.py  check_helm_chart.py  check_no_bulk_close.py  check_threat_model.py  check_tracker_notes.py  dev.sh  fuzz_harness.py  fuzz_report_to_issue.py  gen_cp_api_client.py  gen_openapi_ts.py  gen_ts_sdk.py  infra_smoke.sh  license_check.py  pick_next_story.py  seed_dev.py  stamp_runbook_drill_date.py  tracker_to_machine.py  validate_oncall_schedule.py
(+939 files in other folders)
