[project]
name = "loop-workspace"
version = "0.0.0"
description = "Loop monorepo workspace root — not a publishable package. The publishable SDK lives in packages/sdk-py and is named `loop`."
license = { text = "Apache-2.0" }
requires-python = ">=3.12"

[tool.uv.workspace]
# Only members that actually exist are listed. Each missing package is
# unblocked by a specific Sprint-0 story; add it here in the same PR that
# creates the package skeleton (story IDs in parentheses):
#   packages/gateway        (S007)
#   packages/kb-engine      (S015)
#   packages/eval-harness   (S021)
#   packages/observability  (S009 / S022 territory)
#   packages/channels/web      (S017)
#   packages/channels/slack    (S018)
#   packages/channels/whatsapp (S023)
members = [
    "packages/channels/core",
    "packages/channels/discord",
    "packages/channels/email",
    "packages/channels/slack",
    "packages/channels/sms",
    "packages/channels/teams",
    "packages/channels/telegram",
    "packages/channels/web",
    "packages/channels/whatsapp",
    "packages/channels/rcs",
    "packages/control-plane",
    "packages/data-plane",
    "packages/eval-harness",
    "packages/gateway",
    "packages/kb-engine",
    "packages/mcp-client",
    "packages/mcp-servers/salesforce",
    "packages/mcp-servers/zendesk",
    "packages/memory",
    "packages/runtime",
    "packages/sdk-py",
    "packages/tool-host",
    "packages/voice",
]

[tool.uv.sources]
loop = { workspace = true }
loop-channels-core = { workspace = true }
loop-channels-discord = { workspace = true }
loop-channels-email = { workspace = true }
loop-channels-slack = { workspace = true }
loop-channels-sms = { workspace = true }
loop-channels-teams = { workspace = true }
loop-channels-telegram = { workspace = true }
loop-channels-web = { workspace = true }
loop-channels-whatsapp = { workspace = true }
loop-channels-rcs = { workspace = true }
loop-runtime = { workspace = true }
loop-control-plane = { workspace = true }
loop-eval = { workspace = true }
loop-data-plane = { workspace = true }
loop-gateway = { workspace = true }
loop-kb-engine = { workspace = true }
loop-mcp = { workspace = true }
loop-mcp-salesforce = { workspace = true }
loop-mcp-zendesk = { workspace = true }
loop-memory = { workspace = true }
loop-tool-host = { workspace = true }
loop-voice = { workspace = true }

[dependency-groups]
dev = [
    "loop",
    "loop-channels-core",
    "loop-channels-discord",
    "loop-channels-email",
    "loop-channels-slack",
    "loop-channels-sms",
    "loop-channels-teams",
    "loop-channels-telegram",
    "loop-channels-web",
    "loop-channels-whatsapp",
    "loop-channels-rcs",
    "loop-runtime",
    "loop-control-plane",
    "loop-data-plane",
    "loop-eval",
    "loop-gateway",
    "loop-kb-engine",
    "loop-mcp",
    "loop-mcp-salesforce",
    "loop-mcp-zendesk",
    "loop-memory",
    "loop-tool-host",
    "loop-voice",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pyyaml>=6.0",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "schemathesis>=4.0",
    "testcontainers[postgres]>=4.10",
    "jsonschema>=4.20",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # bugbear
    "SIM",   # simplify
    "ASYNC", # async best practices
    "S",     # bandit
    "RUF",   # ruff-specific
]
ignore = [
    "S101",  # asserts ok in tests
    "S603",  # subprocess (we audit calls)
]

[tool.ruff.lint.per-file-ignores]
# `**/_tests/**` matches every package's _tests directory (e.g.
# `packages/control-plane/_tests/...`). The previous bare `_tests/**`
# only matched a top-level `_tests/` dir that never existed in the
# repo — the rules were silently inactive on package tests. RUF043
# is added because pytest.raises match= patterns are regex-evaluated
# but rarely use raw strings.
"**/_tests/**" = ["S", "ASYNC", "N", "RUF043"]
# Integration tests run against testcontainers; same relaxations as
# `_tests/**` (asserts, hardcoded "passwords" that are ephemeral
# fixture credentials, snake_case helpers, regex match patterns).
"**/_tests_integration/**" = ["S", "ASYNC", "N", "RUF043"]
"tests/**" = ["S", "ASYNC", "N", "E402", "RUF043"]
# build_tracker.py uses typographic en-dashes ("Wk 1–6", "engineers 1–4")
# in deliberate display strings that match the HANDBOOK style.
"tools/build_tracker.py" = ["RUF001"]
# conftest manipulates sys.path before imports — intentional shim.
"conftest.py" = ["E402"]
# Scaffolded files (owned by S004 / S028); revisit during those stories.
"packages/sdk-py/loop/agents/agent.py" = ["RUF012"]
"examples/**" = ["RUF012", "S"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
# Sprint 0: scope strict typecheck to tooling + tests. As each runtime
# module's dependencies land (S004 / S007 / S008 / S011 / S013), expand
# this list and the corresponding tracker entries.
include = ["tools", "scripts", "tests", "conftest.py"]
# Make `import build_tracker` resolve from tests/ without needing an
# installable package wrapper (build_tracker.py is a script).
extraPaths = ["tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Tests live alongside packages (`_tests/`) and at the repo root (`tests/`).
testpaths = ["tests", "packages", "apps"]
python_files = "test_*.py"
addopts = "--strict-markers --strict-config -ra"
markers = [
    "slow: marks tests as slow",
    "integration: requires the docker-compose stack",
    "e2e: end-to-end browser tests",
]

[tool.coverage.run]
branch = true
source = ["packages", "tools"]
omit = ["**/_tests/**"]

[tool.coverage.report]
# Sprint 0: coverage gate is informational only — most packages are still
# scaffolded. Raise to 85 once S007/S008/S011 land. Tracked by S031
# ("Eval-gated deploy") and CI hardening.
fail_under = 0
show_missing = true
