[project]
name = "loop"
version = "0.1.0"
description = "Loop — open-source agent runtime"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "packages/runtime",
    "packages/sdk-py",
    "packages/gateway",
    "packages/kb-engine",
    "packages/eval-harness",
    "packages/observability",
    "packages/mcp-client",
    "packages/channels/web",
    "packages/channels/slack",
    "packages/channels/whatsapp",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-select = [
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # bugbear
    "SIM",   # simplify
    "ASYNC", # async best practices
    "S",     # bandit
    "RUF",   # ruff-specific
]
ignore = [
    "S101",  # asserts ok in tests
    "S603",  # subprocess (we audit calls)
]

[tool.ruff.lint.per-file-ignores]
"_tests/**" = ["S", "ASYNC", "N"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps"]
python_files = "test_*.py"
addopts = "--strict-markers --strict-config -ra"
markers = [
    "slow: marks tests as slow",
    "integration: requires the docker-compose stack",
    "e2e: end-to-end browser tests",
]

[tool.coverage.run]
branch = true
source = ["packages"]
omit = ["**/_tests/**"]

[tool.coverage.report]
fail_under = 85
show_missing = true
